feat: greeting-bot

--- a/src/i18n/locales/de/translations.json
+++ b/src/i18n/locales/de/translations.json
@@ -1,4 +1,5 @@
 {
+    "greeting-bot-text": "Brauchen Sie Hilfe?",
     "nav-home": "Home",
     "nav-about": "Über Uns",
     "footer-terms-link": "Impressum",
