--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -6,7 +6,7 @@
     "footer-privacy-policy-link": "Privacy Policy",
     "footer-company-block-title": "Company",
     "schedule-call-button": "Schedule a 45min call",
-    "footer-copyright-notice": "Made with ♡ in Germany. All rights reserved.",
+    "footer-copyright-notice": "Made in Europe. All rights reserved.",
     "hero-home-intro1": "dot9 puts your digital vision into reality with world-class software. Founded by industry veterans, we excel at execution and product excellence, while putting you and your needs first.",
     "hero-home-intro2": "Whether you are building from scratch, maintaining or scaling an existing product, we jump in at any stage of the software development cycle.",
     "contact-us-button": "Contact us - we are happy to help!",
